--- a/index.html
+++ b/index.html
@@ -42,7 +42,24 @@
       <div class="col-4 p-5">
         <h2 id="work">Work</h2>
       </div>
-      <div class="col border-start border-dark">
+      <!-- project container -->
+      <div class="col  border-start border-dark">
+        <!-- first row -->
+        <div class="row bg-primary">
+         
+          <div class="col-md-2 bg-secondary">
+            col 1 
+          </div>
+          <div class="col-sm-2 bg-secondary">
+            col 2
+          </div>
+        </div>
+        
+      </div>
+      <div>
+
+      </div>
+      <div class="col">
         2 of 3
       </div>
       <div class="col">
