--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Nav -->
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand">
@@ -24,8 +25,8 @@
       </form>
     </div>
   </nav>
-
-  <div class="container gy-5">
+<!-- About Me -->
+  <!-- <div class="container gy-5"> -->
     <div class="row my-5">
       <div class="col-4 p-5">
         <h2 id="about">About Me</h2>
@@ -66,7 +67,7 @@
         3 of 3
       </div>
     </div>
-
+<!-- contact Me -->
     <div class="row">
       <div class="col-4 p5">
         <h2 id="contact">Contact Me</h2>
