index.css: added basic html structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
 </head>
 
 <body>
- 
+ <div class="wrapper">
+   <head class="main-head">The Header</head>
+   <nav class="main-nav">
+     <ul>
+     <li>
+     <a href=""></a>
+     <li>
+     <a href=""></a>
+     <li>
+     <a href=""></a>
+     <li>
+     <a href=""></a>
+   </nav>
+   <article class="content">
+     <h1>Main Article</h1>
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ut.</p>
+   </article>
+   <aside class="side">Aside</aside>
+   <div class="extra">Extra stuff</div>
+   <footer class="main-footer"></footer>
+ </div>
 </body>
 
 </html>
