style.css: sketched 700px min layout

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
    <nav class="main-nav">
      <ul>
      <li>
-     <a href=""></a>
+     <a href="">li 1</a>
      <li>
-     <a href=""></a>
+     <a href="">li 2</a>
      <li>
-     <a href=""></a>
+     <a href="">li 3</a>
      <li>
-     <a href=""></a>
+     <a href="">li 4</a>
    </nav>
    <article class="content">
      <h1>Main Article</h1>
@@ -30,7 +30,7 @@
    </article>
    <aside class="side">Aside</aside>
    <div class="extra">Extra stuff</div>
-   <footer class="main-footer"></footer>
+   <footer class="main-footer">footer</footer>
  </div>
 </body>
 
