index.html: add links to nav and li's to content

--- a/index.html
+++ b/index.html
@@ -11,27 +11,36 @@
 </head>
 
 <body>
- <div class="wrapper">
-   <head class="main-head">The Header</head>
-   <nav class="main-nav">
-     <ul>
-     <li>
-     <a href="">li 1</a>
-     <li>
-     <a href="">li 2</a>
-     <li>
-     <a href="">li 3</a>
-     <li>
-     <a href="">li 4</a>
-   </nav>
-   <article class="content">
-     <h1>Main Article</h1>
-     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, ut.</p>
-   </article>
-   <aside class="side">Aside</aside>
-   <div class="extra">Extra stuff</div>
-   <footer class="main-footer">footer</footer>
- </div>
+  <div class="wrapper">
+
+    <head class="main-head">The Header</head>
+    <nav class="main-nav">
+      <ul>
+        <li><a href="#about" class="nav-link nav-bar-text">About Me</a></li>
+        <li><a href="#work" class="nav-link nav-bar-text">Work</a></li>
+        <li><a href="#contact" class="nav-link nav-bar-text">Contact Me</a></li>
+        <li><a href="#contact" class="nav-link nav-bar-text">Contact Me</a></li>
+      </ul>
+    </nav>
+    <article class="content">
+      <div class="about" id="about">About</div>
+      <div class="work" id="work">
+        <div class="portfolio">
+          <ul>
+          <li class="item-1">item-1</li>
+          <li class="item-2">item-2</li>
+          <li class="item-3">item-3</li>
+          <li class="item-4">item-4</li>
+          <li class="item-5">item-5</li>
+          <li class="item-6">item-6</li>
+        </div>
+      </div>
+      <div class="contact" id="contact">Contact</div>
+    </article>
+    <aside class="side">Aside</aside>
+    <div class="extra">Extra stuff</div>
+    <footer class="main-footer">footer</footer>
+  </div>
 </body>
 
 </html>
