--- a/original-index.html
+++ b/original-index.html
@@ -21,7 +21,7 @@
         <a href="#about" class="nav-link text-dark nav-bar-text text-white">About Me</a>
         <a href="#work" class="nav-link nav-bar-text text-white">Work</a>
         <a href="#contact" class="nav-link nav-bar-text text-white">Contact Me</a>
-        <a href="" class="nav-link nav-bar-text text-white">Resume</a>
+        <a href="#contact" class="nav-link nav-bar-text text-white">Contact Me</a>
       </form>
     </div>
   </nav>
