modified header and it's css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="wrapper">
 
-    <head class="main-head">The Header</head>
+    <header class="main-head">The Header</header>
     <nav class="main-nav">
       <ul>
         <li><a href="#about" class="nav-link nav-bar-text">About Me</a></li>
