added more css to nav bar

--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
 
     <header class="main-head">The Header</header>
     <nav class="main-nav">
-      <ul>
-        <li><a href="#about" class="nav-link nav-bar-text">About Me</a></li>
-        <li><a href="#work" class="nav-link nav-bar-text">Work</a></li>
-        <li><a href="#contact" class="nav-link nav-bar-text">Contact Me</a></li>
-        <li><a href="#contact" class="nav-link nav-bar-text">Contact Me</a></li>
-      </ul>
+      <a href="#about" class="nav-link nav-bar-text">About Me</a>
+      <a href="#work" class="nav-link nav-bar-text">Work</a>
+      <a href="#contact" class="nav-link nav-bar-text">Contact Me</a>
     </nav>
     <article class="content">
-      <div class="about" id="about">About</div>
+      <div class="about" id="about">
+        <h2 id="about">About Me</h2>
+      </div>
+      <div class="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam placeat, explicabo reprehenderit saepe
+          optio ex. Officia, rerum itaque? Fugiat eligendi assumenda amet quae. Voluptas dolorem iure inventore
+          repellendus debitis.</p>
+      </div>
       <div class="work" id="work">
         <div class="portfolio">
-          <ul>
           <li class="item-1">item-1</li>
           <li class="item-2">item-2</li>
           <li class="item-3">item-3</li>
@@ -34,8 +38,7 @@
           <li class="item-5">item-5</li>
           <li class="item-6">item-6</li>
         </div>
-      </div>
-      <div class="contact" id="contact">Contact</div>
+        <div class="contact" id="contact">Contact</div>
     </article>
     <aside class="side">Aside</aside>
     <div class="extra">Extra stuff</div>
