modified the footer

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
     <header class="main-head">The Header</header>
     <nav class="main-nav">
+      <ul>
       <a href="#about" class="nav-link nav-bar-text">About Me</a>
       <a href="#work" class="nav-link nav-bar-text">Work</a>
       <a href="#contact" class="nav-link nav-bar-text">Contact Me</a>
+      </ul>
     </nav>
     <article class="content">
       <div class="about" id="about">
@@ -38,11 +40,24 @@
           <li class="item-5">item-5</li>
           <li class="item-6">item-6</li>
         </div>
-        <div class="contact" id="contact">Contact</div>
     </article>
     <aside class="side">Aside</aside>
     <div class="extra">Extra stuff</div>
-    <footer class="main-footer">footer</footer>
+    <footer class="main-footer">
+      <div class="">
+        <h2 id="contact">Contact Me</h2>
+      </div>
+      <div class="">
+        <a class="border-bottom border-dark text-dark" href="https://www.linkedin.com/in/lionel-townsend-853146114">LinkedIn</a>
+      </div>
+      <div class="">
+        <a class="border-bottom border-dark text-dark" href="mailto:townsendlionel@gmail.com">townsendlionel@gmail.com</a>
+      </div>
+      <div class="">
+        <a class="border-bottom border-dark text-dark" href="https://github.com/leot42">GitHub</a>
+      </div>
+    </div>
+    </footer>
   </div>
 </body>
 
