added project card placeholders

--- a/index.html
+++ b/index.html
@@ -33,12 +33,51 @@
       </div>
       <div class="work" id="work">
         <div class="portfolio">
-          <li class="item-1">item-1</li>
-          <li class="item-2">item-2</li>
-          <li class="item-3">item-3</li>
-          <li class="item-4">item-4</li>
-          <li class="item-5">item-5</li>
-          <li class="item-6">item-6</li>
+          <li class="item-1">
+            <div class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+              </div>
+            </div>
+          </li>
+          <li class="item-1">
+            <div class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+              </div>
+            </div>
+          </li>
+          <li class="item-1">
+            <div class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+              </div>
+            </div>
+          </li>
+          <li class="item-1">
+            <div class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+              </div>
+            </div>
+          </li>
+          <li class="item-1">
+            <div class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
+              <div class="container">
+                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+              </div>
+            </div>
+          </li>
         </div>
     </article>
     <aside class="side">Aside</aside>
