altered cards to remove from li element and reduced max-size

--- a/index.html
+++ b/index.html
@@ -33,51 +33,41 @@
       </div>
       <div class="work" id="work">
         <div class="portfolio">
-          <li class="item-1">
-            <div class="card">
+            <div class="card item-1">
               <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
               <div class="container">
-                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+                <h4><b>Lorem ipsum dolor sit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
             </div>
-          </li>
-          <li class="item-1">
-            <div class="card">
+            <div class="card item-2">
               <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
               <div class="container">
-                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+                <h4><b>Lorem ipsum dolor sit</b></h4> 
+                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
             </div>
-          </li>
-          <li class="item-1">
-            <div class="card">
+            <div class="card item-3">
               <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
               <div class="container">
-                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+                <h4><b>Lorem ipsum dolor sit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
             </div>
-          </li>
-          <li class="item-1">
-            <div class="card">
+            <div class="card item-4">
               <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
               <div class="container">
-                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+                <h4><b>Lorem ipsum dolor sit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
             </div>
-          </li>
-          <li class="item-1">
-            <div class="card">
+            <div class="card item-5">
               <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
               <div class="container">
-                <h4><b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p> 
+                <h4><b>Lorem ipsum dolor sit.</b></h4> 
+                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
             </div>
-          </li>
         </div>
     </article>
     <aside class="side">Aside</aside>
