fixed profile layout for large size

--- a/index.html
+++ b/index.html
@@ -21,69 +21,67 @@
       <a href="#contact" class="nav-link nav-bar-text">Contact Me</a>
       </ul>
     </nav>
-    <article class="content">
-      <div class="about" id="about">
-        <h2 id="about">About Me</h2>
+    <article class="main-content">
+      <!-- About Me -->
+      <div class="about">
+        <h2>About Me</h2>
+        <div class="">
+          <p class="about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam placeat, explicabo reprehenderit saepe
+            optio ex. Officia, rerum itaque? Fugiat eligendi assumenda amet quae. Voluptas dolorem iure inventore
+            repellendus debitis.</p>
+        </div>
       </div>
-      <div class="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, exercitationem?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab aliquam placeat, explicabo reprehenderit saepe
-          optio ex. Officia, rerum itaque? Fugiat eligendi assumenda amet quae. Voluptas dolorem iure inventore
-          repellendus debitis.</p>
-      </div>
-      <div class="work" id="work">
-        <div class="portfolio">
-            <div class="card item-1">
-              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
-              <div class="container">
+      <!-- Portfolio -->
+      <article class="work" id="work">
+        <div class="portfolio cards">
+            <article class="card major-card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar">
+              <div class="content">
                 <h4><b>Lorem ipsum dolor sit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
-            </div>
-            <div class="card item-2">
-              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
-              <div class="container">
+            </article>
+            <article class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar">
+              <div class="content">
                 <h4><b>Lorem ipsum dolor sit</b></h4> 
-                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
-            </div>
-            <div class="card item-3">
-              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
-              <div class="container">
+            </article>
+            <article class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" >
+              <div class="content">
                 <h4><b>Lorem ipsum dolor sit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
-            </div>
-            <div class="card item-4">
-              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
-              <div class="container">
+            </article>
+            <article class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar" >
+              <div class="content">
                 <h4><b>Lorem ipsum dolor sit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
-            </div>
-            <div class="card item-5">
-              <img src="/assets/images/img_avatar.png" alt="Avatar" style="width:100%">
-              <div class="container">
+            </article>
+            <article class="card">
+              <img src="/assets/images/img_avatar.png" alt="Avatar">
+              <div class="content">
                 <h4><b>Lorem ipsum dolor sit.</b></h4> 
-                <p>Lorem ipsum dolor sit amet.</p> 
               </div>
-            </div>
+            </article>
+          </div>
         </div>
     </article>
-    <aside class="side">Aside</aside>
-    <div class="extra">Extra stuff</div>
+    <!-- <aside class="side">Aside</aside> -->
+    <!-- <div class="extra">Extra stuff</div> -->
     <footer class="main-footer">
-      <div class="">
+      <div class="main-footer">
         <h2 id="contact">Contact Me</h2>
       </div>
-      <div class="">
-        <a class="border-bottom border-dark text-dark" href="https://www.linkedin.com/in/lionel-townsend-853146114">LinkedIn</a>
+      <div class="main-footer">
+        <a class="" href="https://www.linkedin.com/in/lionel-townsend-853146114"><img src="assets/images/LI-Logo.png" class="icon-style" alt="LinkedIn icon"></a>
       </div>
-      <div class="">
-        <a class="border-bottom border-dark text-dark" href="mailto:townsendlionel@gmail.com">townsendlionel@gmail.com</a>
+      <div class="main-footer">
+        <a class="" href="mailto:townsendlionel@gmail.com"><img src="assets/images/512x512.png" class="icon-style" alt="E-Mail icon"></a>
       </div>
-      <div class="">
-        <a class="border-bottom border-dark text-dark" href="https://github.com/leot42">GitHub</a>
+      <div class="main-footer">
+        <a class="" href="https://github.com/leot42"><img src="assets/images/GitHub_Logo.png" class="icon-style" alt="Github icon"></a>
       </div>
     </div>
     </footer>
